--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
     sdk: flutter
   provider: ^6.0.5
   mongo_dart: ^0.9.1
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  file_picker: ^5.5.0
 
 dev_dependencies:
   flutter_test:
